--- a/csgoautoexec/autoexec.cfg
+++ b/csgoautoexec/autoexec.cfg
@@ -61,12 +61,12 @@ unbindall
     cl_crosshaircolor_g "225"
     cl_crosshaircolor_b "75"
     cl_crosshairdot "0"
-    cl_crosshairgap "-3"
+    cl_crosshairgap ".1"
     cl_crosshair_t "1"
-    cl_crosshairsize "4"
+    cl_crosshairsize "2"
     cl_crosshairstyle "4"
     cl_crosshairusealpha "1"
-    cl_crosshairthickness "0.5"
+    cl_crosshairthickness ".420"
     cl_crosshair_drawoutline "0"
     cl_crosshair_outlinethickness "1"
     cl_crosshairgap_useweaponvalue "0"
@@ -77,12 +77,13 @@ unbindall
     viewmodel_offset_x 2
     viewmodel_offset_y 2
     viewmodel_offset_z -2
-    viewmodel_fov 70
-    cl_righthand 0
+    viewmodel_fov 68
     cl_bobcycle 0
     cl_bobamt_vert 0
     cl_bob_lower_amt 0
     cl_bobamt_lat 0
+    
+    cl_righthand 0
 
 // hud
 
@@ -160,5 +161,5 @@ unbindall
 echo " "
 echo " ...CZARHEX cfg loaded... "
 echo " "
-echo "Last updated: 15.2.2022"
+echo "Last updated: 21.2.2022"
 host_writeconfig
