--- a/.conkyrc
+++ b/.conkyrc
@@ -1,4 +1,3 @@
-
 conky.config = {
     alignment = 'top_right',
     background = false,
@@ -16,11 +15,11 @@ conky.config = {
     draw_outline = false,
     draw_shades = false,
     extra_newline = false,
-    font = 'Dejavu Sans Mono:size=8',
+    font = 'Liberation Mono:size=8.5',
     gap_x = -1665,
     gap_y = 15,
-    minimum_height = 440,
-    minimum_width = 180,
+    minimum_height = 400,
+    minimum_width = 200,
     net_avg_samples = 2,
     no_buffers = true,
     out_to_console = false,
@@ -44,37 +43,36 @@ conky.config = {
 }
 
 conky.text = [[
-${font Marske:pixelsize=20}$alignc$conky_build_arch ${font}
-${color 7affff}$alignc$kernel
+${color 999999}${hr 1}
 
+${color grey}Kernel$alignr${color 7affff} $kernel
 ${color grey}Uptime$alignr$color $uptime
 
-${color grey}RAM:$color $mem/$memmax $memperc% 
-${membar 6, 188}
+${color grey}RAM:${alignc}$color$mem/$memmax${alignr}$memperc%
+${membar 6, 215}
 
-${color grey}Down: ${downspeedf enp8s0} ${alignr}${downspeedgraph enp8s0 8, 100 7affff BEBEBE -t -l}
+${color grey}CPU${alignr}$color ${execi 1000 cat /proc/cpuinfo | grep 'model name' | sed -e 's/model name.*: //'| uniq | cut -c 1-17}
+${color grey}Usage${alignr}$color $cpu%
+${color grey}Frequency${alignr}$color $freq MHz
+${color grey}Temperature${alignr}$color ${hwmon 0 temp 1} °C
 
-${cpubar cpu1 6, 92} ${cpubar cpu2 6, 92}
-${cpubar cpu3 6, 92} ${cpubar cpu4 6, 92}
-${cpubar cpu5 6, 92} ${cpubar cpu6 6, 92}
-
-${color grey}CPU :$color $cpu% 
-${color grey}Freq:$color $freq MHz
-${color grey}Temp: $color${hwmon 0 temp 1} °C
-
-${color white}Name                CPU%   MEM%
-${color lightgrey}${top name 1}  ${top cpu 1} ${top mem 1}
-${color lightgrey}${top name 2}  ${top cpu 2} ${top mem 2}
-${color lightgrey}${top name 3}  ${top cpu 3} ${top mem 3}
-${color lightgrey}${top name 4}  ${top cpu 4} ${top mem 4}
-${color lightgrey}${top name 5}  ${top cpu 5} ${top mem 5}
+${color white}Name${alignr}CPU%   MEM%
+${color lightgrey}${top name 1}${alignr}${top cpu 1} ${top mem 1}
+${color lightgrey}${top name 2}${alignr}${top cpu 2} ${top mem 2}
+${color lightgrey}${top name 3}${alignr}${top cpu 3} ${top mem 3}
+${color lightgrey}${top name 4}${alignr}${top cpu 4} ${top mem 4}
+${color lightgrey}${top name 5}${alignr}${top cpu 5} ${top mem 5}
 
 ${color white}File systems:
 /     $color${fs_used /}/${fs_size /} ${fs_bar 6 /}
 /home $color${fs_used /home}/${fs_size /home} ${fs_bar 6 /home}
-${color 7affff}/swap${color 7affff} $swap/$swapmax $swapbar 
+${color 7affff}/swap${color 7affff} $swap/$swapmax $swapbar
 
-${color 999999}${font Marske:pixelsize=36}$alignc${time %d  %m  %Y}
-${color 7affff}${font Marske:pixelsize=36}     ${time %H %M }${font Marske:pixelsize=20}${time %S}
+${color grey}Download: ${downspeed enp8s0} ${alignr}${downspeedgraph enp8s0 8, 100 7affff BEBEBE -t -l}
+${color grey}Upload: ${upspeed enp8s0} ${alignr}${upspeedgraph enp8s0 8, 100 7affff BEBEBE -t -l}
+
+${color 999999}${font Liberation Mono:pixelsize=17} ${time %A},
+${color 999999}${font Liberation Mono:pixelsize=34}$alignc${time %d %m %Y}
+${alignc}${color 7affff}${font Liberation Mono:pixelsize=40}${time %H %M }${font Liberation Mono:pixelsize=20}${time %S}
+${color 999999}${hr 1}
 ]];
-
