--- a/config/pcmanfm-qt/lxqt/settings.conf
+++ b/config/pcmanfm-qt/lxqt/settings.conf
@@ -18,7 +18,7 @@ DesktopCellMargins=@Size(3 1)
 DesktopIconSize=36
 DesktopShortcuts=@Invalid()
 FgColor=#ffffff
-Font="Roboto,10,-1,5,50,0,0,0,0,0,Regular"
+Font="Liberation Sans,10,-1,5,50,0,0,0,0,0,Regular"
 HideItems=false
 LastSlide=
 OpenWithDefaultFileManager=false
