--- a/config/neofetch/config.conf
+++ b/config/neofetch/config.conf
@@ -1,4 +1,3 @@
-# See this wiki page for more info:
 # https://github.com/dylanaraps/neofetch/wiki/Customizing-Info
 LC_ALL=C
 LANG=C
@@ -18,7 +17,7 @@ print_info() {
     info "gpu \n \n \n " gpu
     info "memory " memory
     prin "$(color 7)───────────────────────────────────"
-    prin " "
+    #prin " "
     #prin "$(color 1)█████$(color 2)█████$(color 3)█████$(color 4)█████$(color 5)█████$(color 6)█████$(color 7)█████"
     info cols
 }
