--- a/.conkyrc
+++ b/.conkyrc
@@ -16,7 +16,7 @@ conky.config = {
     draw_shades = false,
     extra_newline = false,
     font = 'Liberation Mono:size=8.5',
-    gap_x = -1665,
+    gap_x = -1655,
     gap_y = 15,
     minimum_height = 400,
     minimum_width = 200,
@@ -48,13 +48,13 @@ ${color 999999}${hr 1}
 ${color grey}Kernel$alignr${color 7affff} $kernel
 ${color grey}Uptime$alignr$color $uptime
 
-${color grey}RAM:${alignc}$color$mem/$memmax${alignr}$memperc%
+${color grey}RAM: $color$mem/$memmax${alignr}$memperc%
 ${membar 6, 215}
 
-${color grey}CPU${alignr}$color ${execi 1000 cat /proc/cpuinfo | grep 'model name' | sed -e 's/model name.*: //'| uniq | cut -c 1-17}
+${color grey}CPU${alignr}$color ${execi 1000 cat /proc/cpuinfo | grep 'model name' | sed -e 's/model name.*: //'| uniq | cut -c 1-25}
 ${color grey}Usage${alignr}$color $cpu%
 ${color grey}Frequency${alignr}$color $freq MHz
-${color grey}Temperature${alignr}$color ${hwmon 0 temp 1} °C
+${color grey}Temperature${alignr}$color ${hwmon 2 temp 1} °C
 
 ${color white}Name${alignr}CPU%   MEM%
 ${color lightgrey}${top name 1}${alignr}${top cpu 1} ${top mem 1}
@@ -63,16 +63,13 @@ ${color lightgrey}${top name 3}${alignr}${top cpu 3} ${top mem 3}
 ${color lightgrey}${top name 4}${alignr}${top cpu 4} ${top mem 4}
 ${color lightgrey}${top name 5}${alignr}${top cpu 5} ${top mem 5}
 
-${color white}File systems:
-/     $color${fs_used /}/${fs_size /} ${fs_bar 6 /}
-/home $color${fs_used /home}/${fs_size /home} ${fs_bar 6 /home}
-${color 7affff}/swap${color 7affff} $swap/$swapmax $swapbar
+/ ${alignr}$color${fs_used /}/${fs_size /}
+${color 7affff}/swap${alignr}${color 7affff} $swap/$swapmax
 
-${color grey}Download: ${downspeed enp8s0} ${alignr}${downspeedgraph enp8s0 8, 100 7affff BEBEBE -t -l}
-${color grey}Upload: ${upspeed enp8s0} ${alignr}${upspeedgraph enp8s0 8, 100 7affff BEBEBE -t -l}
+${color grey}Down: ${downspeed enp2s0}${alignr}${color grey}Up: ${upspeed enp2s0}
 
-${color 999999}${font Liberation Mono:pixelsize=17} ${time %A},
-${color 999999}${font Liberation Mono:pixelsize=34}$alignc${time %d %m %Y}
+${color 9f9f9f}${font Liberation Mono:pixelsize=17} ${time %A},
+${color}${font Liberation Mono:pixelsize=34}$alignc${time %d %m %Y}
 ${alignc}${color 7affff}${font Liberation Mono:pixelsize=40}${time %H %M }${font Liberation Mono:pixelsize=20}${time %S}
 ${color 999999}${hr 1}
 ]];
