--- a/config/neofetch/config.conf
+++ b/config/neofetch/config.conf
@@ -64,14 +64,9 @@ underline_enabled="on"
 underline_char="-"
 
 # Info Separator
-# Replace the default separator with the specified string.
-#
-# Default:  ':'
-# Flag:     --separator
-#
 # Example:
 # separator="->":   'Shell-> bash'
-# separator=" =":   'WM = dwm'
+# separator=" =":   'WM = dwm = suckless are nazis'
 separator="->"
 
 
