--- a/.conkyrc
+++ b/.conkyrc
@@ -15,8 +15,8 @@ conky.config = {
     draw_outline = false,
     draw_shades = false,
     extra_newline = false,
-    font = 'Liberation Mono:size=9',
-    gap_x = -1680,
+    font = 'Liberation Mono:size=8.5',
+    gap_x = -1665,
     gap_y = 15,
     minimum_height = 400,
     minimum_width = 200,
@@ -66,6 +66,7 @@ ${color lightgrey}${top name 4}${alignr}${top cpu 4} ${top mem 4}
 ${color lightgrey}${top name 5}${alignr}${top cpu 5} ${top mem 5}
 
 / ${alignr}$color${fs_used /}/${fs_size /}
+/home ${alignr}$color${fs_used /home}/${fs_size /home}
 ${color 7affff}/swap${alignr}${color 7affff} $swap/$swapmax
 
 ${color grey}Down: ${downspeed enp2s0}${alignr}${color grey}Up: ${upspeed enp2s0}
