--- a/.conkyrc
+++ b/.conkyrc
@@ -1,4 +1,3 @@
-# czarhex config
 conky.config = {
     alignment = 'top_right',
     background = false,
@@ -12,7 +11,7 @@ conky.config = {
     default_shade_color = '#999999',
     double_buffer = true,
     draw_borders = false,
-    draw_graph_borders = false,
+    draw_graph_borders = true,
     draw_outline = false,
     draw_shades = false,
     extra_newline = false,
@@ -45,9 +44,6 @@ conky.config = {
 
 conky.text = [[
 
-# ---
-# Font used for the clock ---> CP Mono <--- https://github.com/chrissimpkins/codeface/tree/master/fonts/cp-mono
-# ---
 ${alignc}${color 7affff}${font CPMono_v07:pixelsize=35}${time %H:%M}
 ${font Liberation Mono:pixelsize=12}${color grey}Date$alignr$color ${time %a, %d-%m-%Y}
 
@@ -68,10 +64,9 @@ ${color grey}Temperature${alignr}$color ${exec sensors | grep 'Package id' | awk
 ${color grey}GPU${alignr}${color}${execi 1000 nvidia-smi --query-gpu=gpu_name --format=csv,noheader | cut -c 15-30}
 ${color grey}NVIDIA Temp${alignr}${color}+${execi 60 nvidia-settings -query [gpu:0]/GPUCoreTemp -t}°C
 # ----
-# AMD & Intel
+# AMD
 # ----
-# Nothing over here yet.
-# Primarily because I (czarhex) do not own an AMD or Intel gpu
+# nothing over here yet.
 
 / ${alignr}$color${fs_used /}/${fs_size /}
 /home ${alignr}$color${fs_used /home}/${fs_size /home}
@@ -87,6 +82,5 @@ ${color lightgrey}${top name 3}${alignr}${top cpu 3} ${top mem 3}
 ${color lightgrey}${top name 4}${alignr}${top cpu 4} ${top mem 4}
 ${color lightgrey}${top name 5}${alignr}${top cpu 5} ${top mem 5}
 
-# Weather ( uses wttr.in ), you may specify your location also between / and \
-${color white}Weather report: ${color lightgrey}${execi 1000 curl https://wttr.in/\?0Tq}
+${color white}Weather report: ${color 7affff}${execi 420 curl https://wttr.in/\?0Tq}
 ]];
