--- a/.conkyrc
+++ b/.conkyrc
@@ -58,13 +58,13 @@ ${membar 6, 215}
 ${color grey}CPU${alignr}$color ${execi 1000 cat /proc/cpuinfo | grep 'model name' | sed -e 's/model name.*: //'| uniq | cut -c 1-25}
 ${color grey}Usage${alignr}$color $cpu%
 ${color grey}Frequency${alignr}$color $freq MHz
-${color grey}Temperature${alignr}$color ${exec sensors | grep 'Package id' | awk '{print $4}'}
+${color grey}Temperature${alignr}$color ${exec sensors | grep 'Package id' | awk '{print $4}' | cut -c 2-3}°C
 
 # ------------------------------------------------------------------------------
 # Gets the name and temperature of an NVIDIA card, requires proprietary drivers
 # ------------------------------------------------------------------------------
 ${color grey}GPU${alignr}${color}${execi 1000 nvidia-smi --query-gpu=gpu_name --format=csv,noheader | cut -c 15-30}
-${color grey}NVIDIA Temp${alignr}${color}+${execi 60 nvidia-settings -query [gpu:0]/GPUCoreTemp -t}°C
+${color grey}NVIDIA Temp${alignr}${color}${execi 60 nvidia-settings -query [gpu:0]/GPUCoreTemp -t}°C
 # ----
 # AMD
 # ----
