--- a/.conkyrc
+++ b/.conkyrc
@@ -18,8 +18,8 @@ conky.config = {
     font = 'Liberation Mono:size=9',
     gap_x = -1665,
     gap_y = 15,
-    minimum_height = 400,
-    minimum_width = 200,
+    maximum_height = 400,
+    maximum_width = 215,
     net_avg_samples = 2,
     no_buffers = true,
     out_to_console = false,
