--- a/.config/neofetch/config.conf
+++ b/.config/neofetch/config.conf
@@ -6,6 +6,7 @@ print_info() {
     info title
     prin "$(color 7)───────────────────────────────────"
     info "distro " distro
+    info "host \n \n " model
     info "kernel " kernel
     info "wm \n \n \n \n \n" wm
     info "de \n \n \n \n \n" de
