--- a/overlord/.config/kitty/kitty.conf
+++ b/overlord/.config/kitty/kitty.conf
@@ -13,21 +13,21 @@ selection_background  #343f4c
 selection_foreground #202020
 
 
-color0                #000000
-color8                #545753
-color1                #cc0000
-color9                #ef2828
-color2                #4e9a05
-color10               #8ae234
-color3                #c4a000
-color11               #fce94e
-color4                #3464a4
-color12               #719ecf
-color5                #74507a
-color13               #ad7ea7
-color6                #05989a
-color14               #34e2e2
-color7                #d3d7cf
+color0                #171421
+color8                #5E5C64
+color1                #C01C28
+color9                #F66151
+color2                #26A269
+color10               #33DA7A
+color3                #A27C4C
+color11               #E9AD0C
+color4                #12488B
+color12               #2A7BDE
+color5                #A347BA
+color13               #C061CB
+color6                #2AA1B3
+color14               #33C7DE
+color7                #d3d7c7
 color15               #ededec
 
 remember_window_size  yes
