--- a/.steam/steam/steamapps/common/Counter-Strike Global Offensive/csgo/cfg/autoexec.cfg
+++ b/.steam/steam/steamapps/common/Counter-Strike Global Offensive/csgo/cfg/autoexec.cfg
@@ -59,7 +59,7 @@ unbindall
     cl_crosshairalpha "255"
     cl_crosshaircolor_r "75"
     cl_crosshaircolor_g "225"
-    cl_crosshaircolor_b "75"
+    cl_crosshaircolor_b "155"
     cl_crosshairdot "0"
     cl_crosshairgap ".1"
     cl_crosshair_t "0"
@@ -97,7 +97,8 @@ unbindall
 // alias
 
     alias dc "disconnect"
-    alias dm "ignorerad; ignoremsg; voice_enable 0"
+    alias dmd "ignorerad; ignoremsg; voice_enable 0"
+    alias dme "ignorerad; ignoremsg; voice_enable 1"
 
     alias "+jumpthrow" "+jump;-attack"
     alias "-jumpthrow" "-jump"
@@ -159,7 +160,7 @@ unbindall
 // cool
 
 echo " "
-echo " ...CZARHEX cfg loaded... "
+echo " ...CZARHEX CFG LOADED... "
 echo " "
-echo "Last updated: 21.2.2022"
+echo "Last updated: 15.5.2022"
 host_writeconfig
