--- a/overlord/.config/conky/Regulus/Regulus.conf
+++ b/overlord/.config/conky/Regulus/Regulus.conf
@@ -85,10 +85,10 @@ ${offset 165}${voffset 2}${font Helvetica Neue:size=8}Downspeed : ${downspeed en
 ${offset 165}${voffset 0}${downspeedgraph enp2s0 20,107 1EF75E 1EF75E}
 ${offset 165}${voffset 0}${color}${font Helvetica Neue:size=8}Upspeed : ${upspeed enp2s0}
 ${offset 165}${voffset 0}${upspeedgraph enp2s0 20,107 FF3A70 FF3A70}
-${color1}${alignr 13}${voffset 10}${font Bebas Neue:size=24}${mpd_title}${font}
-${color}${alignr 13}${voffset 4}${if_running mpd}${font Material:size=12} ${font Helvetica Neue:size=12}${mpd_artist}${else} ${endif}${font}
 ${image ~/.config/conky/Regulus/res/Box1.png -s 140x140 -p 150,10}\
 ${image ~/.config/conky/Regulus/res/Box.png -s 140x140 -p 150,165}\
 ${image ~/.config/conky/Regulus/res/Box.png -s 140x140 -p 150,320}\
 ${image ~/.cache/weather-icon.png -p 160,175 -s 50x50}\
+
+${offset 230}${voffset -337}${font BlexMono Nerd Font:size=10}墳 ${font Helvetica Neue:size=10}${color}${execi 1 pamixer --get-volume-human}
 ]]
