--- a/overlord/.config/conky/Regulus/Regulus.conf
+++ b/overlord/.config/conky/Regulus/Regulus.conf
@@ -90,5 +90,6 @@ ${image ~/.config/conky/Regulus/res/Box.png -s 140x140 -p 150,165}\
 ${image ~/.config/conky/Regulus/res/Box.png -s 140x140 -p 150,320}\
 ${image ~/.cache/weather-icon.png -p 160,175 -s 50x50}\
 
-${offset 230}${voffset -337}${font BlexMono Nerd Font:size=10}墳 ${font Helvetica Neue:size=10}${color}${execi 1 pamixer --get-volume-human}
+${offset 228}${voffset -360}${font BlexMono Nerd Font:size=10}﨏 ${font Helvetica Neue:size=10}${color}${exec sensors | grep 'Package id' | awk '{print $4}' | cut -c 2-3}°C
+${offset 228}${voffset 0}${font BlexMono Nerd Font:size=10}墳 ${font Helvetica Neue:size=10}${color}${execi 1 pamixer --get-volume-human}
 ]]
