--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -6,7 +6,7 @@ bold_italic_font auto
 font_size 10.5
 
 
-background            #010A0C
+background            #010101
 foreground            #f0f0f0
 cursor                #d0d0d0
 selection_background  #343f4c
