--- a/csgo/autoexec.cfg
+++ b/csgo/autoexec.cfg
@@ -83,7 +83,7 @@ unbindall
     cl_bob_lower_amt 0
     cl_bobamt_lat 0
     
-    cl_righthand 1
+    cl_righthand 0
 
 // hud
 
@@ -144,7 +144,7 @@ unbindall
 // misc
 
     joystick 0
-    mm_dedicated_search_maxping 50
+    mm_dedicated_search_maxping 76
     cl_join_advertise 0
     cl_autowepswitch 0
     fps_max 999
@@ -160,7 +160,7 @@ unbindall
 // cool
 
 echo " "
-echo " ...CZARHEX CFG LOADED... "
+echo " ユリ不幸のコンフィグ使用可能 "
+echo " last update: 2022/9/7 "
 echo " "
-echo "Last updated: 15.5.2022"
 host_writeconfig
