--- a/csgo/autoexec.cfg
+++ b/csgo/autoexec.cfg
@@ -160,7 +160,7 @@ unbindall
 // cool
 
 echo " "
-echo " ユリ不幸のコンフィグ使用可能 "
-echo " last update: 2022/9/15 "
+echo " yurifuko cfg loaded "
+echo " v: 2022/9/30 "
 echo " "
 host_writeconfig
