--- a/csgo/autoexec.cfg
+++ b/csgo/autoexec.cfg
@@ -66,9 +66,9 @@ unbindall
     cl_crosshairsize "2"
     cl_crosshairstyle "4"
     cl_crosshairusealpha "1"
-    cl_crosshairthickness ".69"
-    cl_crosshair_drawoutline "1"
-    cl_crosshair_outlinethickness "1"
+    cl_crosshairthickness ".420"
+    cl_crosshair_drawoutline "0"
+    cl_crosshair_outlinethickness ".69"
     cl_crosshairgap_useweaponvalue "0"
     cl_crosshair_sniper_width "1"
 
